@startuml business
skinparam classAttributeIconSize 0

' ===== Job =====
entity "Job" {
  - id: Integer
  - name: String
  - is_enabled: Boolean = true
}

' ===== Work Details =====
class WorkDetails {
  - work_model: Enum
  - contract_type: Enum
  - job: Job
  - schedule: JSON
  - is_enabled: Boolean
  - branch: Branch
  - user: User
}

' ===== Company =====
entity Company {
  - id: Integer
  - name: String
}

' ===== Branch =====
entity Branch {
  - id: Integer
  - name: String
  - registration_number: String {length = 14}
  - is_enabled: Boolean = true
  - company: Company
}

' ===== User Details =====
entity UserDetails {
  - id: Integer
  - name: String
  - last_name: String
  - identification_number: String {length = 11}
  - user: User
}

' ===== User =====
entity User {
  - id: Integer
  - email: String
  - password: String
  - role: Enum
  - is_first_access: Boolean = true
  - is_enabled: Boolean = true
}

' ===== Work Log =====
entity WorkLog {
  - id: Integer
  - sequential_registration_number: Integer {length = 9}
  - instant: Instant
  - fiscal_date: String {length = 8}
  - fiscal_time: String {length = 4}
  - geolocation: Point
  - status: Enum = "OK"
  - hash: String {length = 64}
  - user: User
}

' ===== Work Log Adjustment =====
entity WorkLogAdjustment {
  - id: Integer
  - instant: Instant
  - requested_at: Date
  - audit_by: User
  - audit_at: Instant
  - message: String
  - status: Enum = "PENDING"
  - work_log: WorkLog
}

' ===== Notification =====
entity Notification {
  - id: Integer
  - message: String
  - status: Enum = "UNREAD"
  - user: User
}

' ===== Relationships =====

' Job
Job "1" o-- "many" WorkDetails

' Company
Company "1" *-- "many" Branch

' UserDetails
UserDetails "1" --* "1" User
UserDetails "1" --> "many" Branch

' Notification
Notification "many" --* "1" User

' WorkDetails
WorkDetails "1" --o "1" Branch
WorkDetails "1" --* "1" User

' WorkLog
User "1" *-- "many" WorkLog
WorkLog "0.1" *-- "many" WorkLogAdjustment

' WorkLogAdjustment
WorkLogAdjustment "many" --o "1" User
@enduml
